--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,58 @@
-h1{
-  border-color: #d3e644;
-  border-style: dashed;
+body {
+    background-color: grey;
+}
+
+.header {
+    text-transform: uppercase;
+    font-family: 'Lucida Handwriting';
+    text-align: center;
+    background-color: green;
+    padding: 40px;
+}
+
+ul {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    background-color: rgb(7, 156, 7);
+    padding: 20px;
+}
+
+.logo img {
+    width: 60px;
+    height: auto;
+    position: absolute;
+    top: 40px;
+    right: 20px;
+}
+
+.information {
+    background-color: green;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+h2 {
+    text-align: center;
+}
+
+.content {
+    background-color: aqua;
+    flex: 7;
+    margin: 10px 10px 10px 10px;
+}
+
+.images {
+    background-color: blue;
+    flex: 3;
+    margin: 10px 10px 10px 10px;
+    text-align: center;
+}
+
+.disclaimer {
+    background-color: green;
 }
