--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,7 @@ body {
 }
 
 .header {
-    text-transform: uppercase;
-    font-family: 'Lucida Handwriting';
+    font-family: 'Cinzel Decorative';
     text-align: center;
     background-color: green;
     display: flex;
@@ -12,7 +11,9 @@ body {
 }
 
 ul {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 300;
     font-size: 20px;
     display: flex;
     list-style: none;
@@ -41,13 +42,15 @@ ul {
 }
 
 h2 {
-    text-transform: uppercase;
-    font-family: 'Lucida Handwriting';
+    font-family: 'Cinzel Decorative';
     text-align: center;
 }
 
 .content {
     background-color: rgb(7, 156, 7);
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 300;
     flex: 7;
     margin: 10px 10px 10px 10px;
 }
